--- a/templates/add_material.html
+++ b/templates/add_material.html
@@ -94,6 +94,14 @@
             <button type="submit" class="btn btn-primary btn-block">Malzeme Ekle</button>
         </form>
         <a href="{{ url_for('admin_dashboard') }}" class="btn btn-secondary btn-block mt-3">Geri Dön</a>
+        
+        {% with messages = get_flashed_messages(with_categories=true) %}
+        {% if messages %}
+            {% for category, message in messages %}
+                <div class="alert alert-{{ category }} mt-3">{{ message }}</div>
+            {% endfor %}
+        {% endif %}
+        {% endwith %}
     </div>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
