--- a/templates/admin_dashboard.html
+++ b/templates/admin_dashboard.html
@@ -25,12 +25,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Admin Dashboard</title>
+    <title>Tedarikçi Anasayfa</title>
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#">Admin Dashboard</a>
+        <a class="navbar-brand" href="#">Tedarikçi Anasayfa</a>
         <div class="collapse navbar-collapse">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
@@ -53,8 +53,8 @@
             <div class="col-md-4">
                 <div class="card text-center">
                     <div class="card-body">
-                        <h5 class="card-title">Veritabanını Düzenle</h5>
-                        <p class="card-text">Malzeme veritabanını düzenleyin.</p>
+                        <h5 class="card-title">Malzeme Çıkış Bilgileri</h5>
+                        <p class="card-text">Malzeme çıkış bilgilerini düzenleyin.</p>
                         <a href="{{ url_for('edit_database') }}" class="btn btn-primary">Git</a>
                     </div>
                 </div>
