--- a/templates/edit_database.html
+++ b/templates/edit_database.html
@@ -29,31 +29,39 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Veritabanını Düzenle</title>
+    <title>Çıkış Bilgileri</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 </head>
 <body>
-    <div class="container mt-5">
-        <h1 class="text-center">Veritabanını Düzenle</h1>
-        <form action="{{ url_for('edit_database') }}" method="post" class="mt-4">
+    <div class="container">
+        <h1 class="my-4">Malzemenin Çıkış Bilgilerini Giriniz</h1>       
+        <form method="POST" action="{{ url_for('edit_database') }}">
             <div class="form-group">
                 <label for="rfid_code">RFID Kodu:</label>
                 <input type="text" class="form-control" id="rfid_code" name="rfid_code" required>
             </div>
             <div class="form-group">
-                <label for="departure_address">Çıkış Adresi:</label>
-                <input type="text" class="form-control" id="departure_address" name="departure_address" required>
+                <label for="dispatch_address">Çıkış Adresi:</label>
+                <input type="text" class="form-control" id="dispatch_address" name="dispatch_address" required>
             </div>
             <div class="form-group">
-                <label for="departure_time">Çıkış Zamanı:</label>
-                <input type="text" class="form-control" id="departure_time" name="departure_time" placeholder="YYYY-MM-DD HH:MM:SS" required>
+                <label for="dispatch_time">Çıkış Saati:</label>
+                <input type="datetime-local" class="form-control" id="dispatch_time" name="dispatch_time" required>
             </div>
-            <button type="submit" class="btn btn-primary btn-block">Güncelle</button>
+            <button type="submit" class="btn btn-primary">Güncelle</button>
         </form>
-        <a href="{{ url_for('admin_dashboard') }}" class="btn btn-secondary btn-block mt-3">Geri Dön</a>
+        <a class="btn btn-secondary mt-3" href="{{ url_for('admin_dashboard') }}">Geri Dön</a>
+        {% with messages = get_flashed_messages(with_categories=true) %}
+        {% if messages %}
+            {% for category, message in messages %}
+                <div class="alert alert-{{ category }} mt-3">{{ message }}</div>
+            {% endfor %}
+        {% endif %}
+        {% endwith %}
     </div>
+    <!-- Bootstrap JS and dependencies -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
 </html>
