--- a/templates/login.html
+++ b/templates/login.html
@@ -53,6 +53,13 @@
                                 <label for="password">Şifre</label>
                                 <input type="password" class="form-control" id="password" name="password" required>
                             </div>
+                            {% with messages = get_flashed_messages(with_categories=true) %}
+                            {% if messages %}
+                                {% for category, message in messages %}
+                                    <div class="alert alert-{{ category }} mt-3">{{ message }}</div>
+                                {% endfor %}
+                            {% endif %}
+                            {% endwith %}
                             <button type="submit" class="btn btn-primary btn-block">Login</button>
                         </form>
                     </div>
