--- a/templates/register.html
+++ b/templates/register.html
@@ -59,16 +59,23 @@
                                 <input type="password" class="form-control" id="password" name="password" required>
                             </div>
                             <div class="form-group">
-                                <label for="role">Rol</label>
+                                <label for="role">Kullanıcı</label>
                                 <select class="form-control" id="role" name="role" required>
-                                    <option value="admin">Malzeme Üreticisi (Admin)</option>
-                                    <option value="user">Şantiye Kullanıcısı (User)</option>
+                                    <option value="admin">Malzeme Üreticisi</option>
+                                    <option value="user">İnşaat Firması</option>
                                 </select>
                             </div>
                             <div class="form-group">
                                 <label for="company_name">Şirket İsmi</label>
                                 <input type="text" class="form-control" id="company_name" name="company_name" required>
                             </div>
+                            {% with messages = get_flashed_messages(with_categories=true) %}
+                            {% if messages %}
+                                {% for category, message in messages %}
+                                    <div class="alert alert-{{ category }} mt-3">{{ message }}</div>
+                                {% endfor %}
+                            {% endif %}
+                            {% endwith %}
                             <button type="submit" class="btn btn-primary btn-block">Register</button>
                         </form>
                     </div>
