--- a/templates/user_dashboard.html
+++ b/templates/user_dashboard.html
@@ -1,21 +1,3 @@
-<!--<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>User Dashboard</title>
-</head>
-<body>
-    <h1>User Dashboard</h1>
-    <ul>
-        <li><a href="{{ url_for('view_user_materials') }}">Malzeme Bilgilerini Görüntüle</a></li>
-        <li><a href="{{ url_for('track_user_material') }}">Malzeme Takibini Gerçekleştir</a></li>
-        <li><a href="{{ url_for('logout') }}">Çıkış Yap</a></li>
-    </ul>
-</body>
-</html>
--->
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -26,7 +8,7 @@
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#">User Dashboard</a>
+        <a class="navbar-brand" href="#">İnşaat Firması</a>
         <div class="collapse navbar-collapse">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
